--- a/Luckitea_css/main_style.css
+++ b/Luckitea_css/main_style.css
@@ -1,12 +1,40 @@
 body{
-    background-image:linear-gradient(#800020, #f2e5e8);
+	font-family: Serif;
+}
+
+main{
+		background-image:linear-gradient(#915F6D, #98FB98);
+		color: #51414F;
+
+	
 }
 
 header{
-    background-color: #ffcd8e;
+	background-color: #915F6D;
+}
+
+h1{
+	
+}
+
+nav li{
+    color: #51414F;
 }
 
 nav{
-
+	color: #51414F;
 }
 
+main{
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  
+}
+
+footer{
+	align items: right;
+	color: #51414F;
+}
