--- a/Luckitea_css/main_style.css
+++ b/Luckitea_css/main_style.css
@@ -1,9 +1,14 @@
+
+
 body{
 	font-family: Serif;
 }
 
 main{
-		background-image:linear-gradient(#915F6D, #98FB98);
+		background-image: url('../teaBack.png');
+		background-size: 400px;
+		width: 600;
+		height: 500;
 		color: #51414F;
 
 	
@@ -13,9 +18,7 @@ header{
 	background-color: #915F6D;
 }
 
-h1{
-	
-}
+  
 
 nav li{
     color: #51414F;
