--- a/Luckitea_css/main_style.css
+++ b/Luckitea_css/main_style.css
@@ -20,15 +20,15 @@ header{
 
   
 
-nav li{
+menu li{
     color: #51414F;
 	list-style-type: none;
 
 }
 
-nav{
+menu{
 	color: #51414F;
-	
+	list-style-type: none;
 	margin: 0;
 	padding: 0;
 }
