--- a/LuckiteaReact/src/app.css
+++ b/LuckiteaReact/src/app.css
@@ -1,5 +1,13 @@
 .body{
-	font-family: Serif;
+	display: flex;
+	flex-direction: column;
+	min-width: 375px;
+	height: 100vh;
+}
+
+header{
+	flex: 0 80px;
+	background-color: #915F6D;
 }
 
 main{
@@ -9,49 +17,44 @@ main{
 		height: 500;
 		color: #51414F;
 		text-decoration: none;
-
-	
+		flex: 1;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: space-around;
 }
 
-header{
-	background-color: #915F6D;
+menu{
+	flex: 1;
+	display: flex;
+	flex-direction: row !important;
+	list-style: none;
 }
 
-  
+.navbar-brand {
+	padding-left: 0.3em;
+	border-bottom: solid rgb(182, 182, 182) thin;
+  }
 
-menu li{
-    color: #51414F;
-	list-style-type: none;
-	margin: 0;
-	padding: 0;
-	background-color: #51414F;
-	list-style-type: none;
-	display:inline-block;
-    border:1px solid #51414F;
-    padding: 5px;
-
-}
-
-menu li a{
+menu .nav-item {
 	text-decoration: none;
 	color: #FFFFFF;
-}
-
-.container{
-	align-items: left;
-
-}
-
-main{
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  
+	padding: 0 0.3em;
 }
 
 footer{
-	align-items: right;
-	color: #51414F;
+	flex: 0 30px;
+}
+
+footer a{
+	float: right;
+}
+
+@media (max-height: 600px) {
+	header {
+	  display: none;
+	}
+	footer {
+	  display: none;
+	}
 }
