--- a/LuckiteaReact/src/mainScreen/luckGame.css
+++ b/LuckiteaReact/src/mainScreen/luckGame.css
@@ -3,63 +3,56 @@
 }
 
 .game {
-  background: rgb(0, 0, 0);
+  background: './teaCup.png';
   border-radius: 50%;
-  box-shadow: 0 0 20px 5px rgb(69, 69, 69);
+  /* box-shadow: 0 0 20px 5px rgb(69, 69, 69); */
   width: 80vw;
   height: 80vw;
   position: absolute;
   min-width: 300px;
   min-height: 300px;
-  max-width: min(80vmin, 1000px);
-  max-height: min(80vmin, 1000px);
-}
+  max-width: min(100vmin, 10px);
+  max-height: min(100vmin, 10px); 
+ }
 
 .button-container {
+  
   width: 100%;
   height: 100%;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+  /* display: row; */
+  position: center;
+  /* grid-template-columns: 1fr 1fr; */
   gap: 20px;
 }
 
 .game-button {
   filter: brightness(50%);
+  background-image: './teaCup.png';
 }
 
-.button-top-left {
-  border-radius: 100% 0 0 0;
+.button-left {
+  border-radius: 100%;
   margin: 20px 0 0 20px;
-  background-color: green;
-  border: thick solid rgb(36, 53, 0);
+  background-image: './teaCup.png';
 }
 
-.button-top-right {
-  border-radius: 0 100% 0 0;
-  margin: 20px 20px 0 0;
-  background-color: red;
-  border: thick solid rgb(83, 12, 12);
+.button-right {
+  border-radius: 100%;
+  margin: 20px 0 0 20px;
+  background-image: './teaCup.png';
 }
 
-.button-bottom-left {
-  border-radius: 0 0 0 100%;
-  margin: 0 0 20px 20px;
-  background-color: yellow;
-  border: thick solid rgb(94, 90, 10);
-}
-
-.button-bottom-right {
-  border-radius: 0 0 100% 0;
-  margin: 0 20px 20px 0;
-  background-color: blue;
-  border: thick solid rgb(27, 14, 100);
+.button-middle {
+  border-radius: 100%;
+  margin: 20px 0 0 20px;
+  background-image: './teaCup.png';
 }
 
 .light-on {
   filter: brightness(100%);
 }
 
-.controls {
+/* .controls {
   position: absolute;
   border-radius: 50%;
   width: 200px;
@@ -70,31 +63,21 @@
   align-items: center;
   justify-content: space-around;
   flex-direction: column;
-}
-
-.game-name {
-  font-size: 2em;
-  font-weight: normal;
-  margin-bottom: 0.5em;
-}
-
-.game-name sup {
-  font-weight: 100;
-}
+} */
 
 .score {
-  position: absolute;
+  position: right;
   text-align: center;
   font-size: 20px;
   font-family: monospace;
   font-weight: bold;
-  color: red;
+  color: rgb(51, 255, 0);
   cursor: default;
   width: 50px;
   height: 30px;
   border-radius: 10px;
-  border: solid thin rgb(117, 0, 0);
-  background-color: #300;
+  border: solid thin rgb(0, 160, 48);
+  background-color: rgb(0, 51, 27);
 }
 
 .center {
