--- a/LuckiteaReact/src/login/authenticated.css
+++ b/LuckiteaReact/src/login/authenticated.css
@@ -1,5 +1,8 @@
 .playerName {
-  color: rgb(118, 190, 210);
+  color: rgb(62, 159, 185);
   font-size: 1.5em;
   padding: 0.5em;
+  margin: 10px;
+  background: rgb(145, 95, 109, 0.6);
+  border-radius: 10px;
 }
