--- a/LuckiteaReact/src/mainScreen/luckGame.css
+++ b/LuckiteaReact/src/mainScreen/luckGame.css
@@ -1,10 +1,7 @@
-#count {
-  color: rgb(246, 239, 158);
-}
 
 .game {
-  background: './teaCup.png';
   border-radius: 50%;
+  background-image: './teaBack.png';
   /* box-shadow: 0 0 20px 5px rgb(69, 69, 69); */
   width: 80vw;
   height: 80vw;
@@ -16,40 +13,46 @@
  }
 
 .button-container {
-  
-  width: 100%;
-  height: 100%;
+  /* width: 100%;
+  height: 100%; */
   /* display: row; */
-  position: center;
+  /* position: center; */
   /* grid-template-columns: 1fr 1fr; */
-  gap: 20px;
+  /* gap: 20px; */
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
-.game-button {
+/* .game-button {
   filter: brightness(50%);
   background-image: './teaCup.png';
-}
+} */
 
 .button-left {
   border-radius: 100%;
   margin: 20px 0 0 20px;
-  background-image: './teaCup.png';
 }
 
 .button-right {
   border-radius: 100%;
   margin: 20px 0 0 20px;
-  background-image: './teaCup.png';
 }
 
 .button-middle {
   border-radius: 100%;
   margin: 20px 0 0 20px;
-  background-image: './teaCup.png';
 }
 
 .light-on {
   filter: brightness(100%);
+}
+
+.picture{
+  width: 50px; /* Adjust the size as needed */
+  height: auto;
 }
 
 /* .controls {
@@ -66,7 +69,7 @@
 } */
 
 .score {
-  position: right;
+  float: right;
   text-align: center;
   font-size: 20px;
   font-family: monospace;
@@ -80,8 +83,8 @@
   background-color: rgb(0, 51, 27);
 }
 
-.center {
+/* .center {
   top: 50%;
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
-}
+} */
