--- a/LuckiteaReact/src/mainScreen/players.css
+++ b/LuckiteaReact/src/mainScreen/players.css
@@ -2,20 +2,25 @@
   flex: 1;
   width: 100%;
   padding: 0.5em;
+  color: rgb(62, 159, 185);
 }
 
 .player-name {
-  color: rgb(124, 118, 210);
+  /* color: #cc6985; */
+  color: rgb(165, 220, 235);
   margin: 0 0.25em;
+  font-weight: bold;
 }
 
 #player-messages {
-  padding-top: 0.25em;
-  opacity: 0.7;
+  position: absolute;
+  right: 0;
+  padding-right: 25px;
+  opacity: 0.6; 
 }
 
 .event {
-  color: rgb(69, 69, 69);
+  color: rgb(152, 240, 141);
 }
 
 .player-event {
